# swift-stack

./: .gitignore  CMakeLists.txt  Makefile  README.md  control.c  control.h  dbg.h  main.c  movement.c  movement.h  project.txt  static_data.c  static_data.h  video_data.c  video_data.h
cmake/: FindSDL2.cmake  FindSDL2TTF.cmake
src/: Makefile  coord_map.c  coord_map.h  error.h  game_data.c  game_data.h  logic.c  logic.h  main.c  math_data.c  math_data.h  test.c
